[project]
name = "gitecho"
version = "0.1.4"
description = "Dead simple, invisible git mirroring utility."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich",
    "gitpython"
]

[project.scripts]
ge = "echo:app"
gitecho = "echo:app"
